--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "p-limit": "^3.1.0",
     "puppeteer": "^24.4.0",
     "puppeteer-core": "^24.4.0",
+    "speakeasy": "^2.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
